fix all lessons

--- a/app/src/main/res/layout/activity_java_conditional_statements.xml
+++ b/app/src/main/res/layout/activity_java_conditional_statements.xml
@@ -18,7 +18,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:fontFamily="@font/font"
             android:text="Control Statements"
             android:textAllCaps="true"
             android:textColor="#000000"
@@ -47,9 +46,7 @@
             android:id="@+id/textView16"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="Hello, It's me Codey again! I'd be happy to help you understand control statements in programming. Let's explore how conditions and if statements work in Java."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -67,7 +64,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="In Java, Conditional statements provide code's flow control through evaluation of certain conditions and execution of specific blocks of code depending on its results. This type of statement helps to create flexible and dynamic programs that are capable of adaptation to different scenarios. By making use of perplexity and burstiness, the program can truly reach its full potential - by having some sentences be longer than the average, while others are shorter. In this way, the same program can be adapted to diverse and varied environments."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -81,8 +77,7 @@
             android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:fontFamily="@font/lionel"
+            android:layout_marginTop="16dp"
             android:text="Conditions"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -94,7 +89,6 @@
             android:id="@+id/textView4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="Conditions are expressions that are evaluated as either true or false. They vary in complexity, ranging from simple comparison between variables to more intricate logical expressions. Common operators used in conditions include:"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -120,9 +114,7 @@
             android:id="@+id/textView42"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="You already know that Java supports the usual logical conditions from mathematics:"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -153,7 +145,6 @@
             android:id="@+id/textView30"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="@string/operators"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -167,7 +158,6 @@
             android:id="@+id/textView35"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="You can use these conditions to perform different actions for different decisions."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -183,8 +173,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="10dp"
-            android:fontFamily="@font/lionel"
             android:text="Java has the following conditional statements:"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -200,7 +188,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:fontFamily="@font/lionel"
             android:text="@string/followingcondition"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -215,7 +202,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="IF Statement"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -227,7 +213,6 @@
             android:id="@+id/textView45"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="Use the if statement to specify a block of Java code to be executed if a condition is true."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -241,10 +226,7 @@
             android:id="@+id/btndyk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="64dp"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
-            android:shadowColor="#575757"
+            android:theme="@style/lionelButton"
             android:text="@string/dyk"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -275,9 +257,8 @@
             android:id="@+id/textView48"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/if_simple"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -291,9 +272,8 @@
             android:id="@+id/textView49"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/ifexample1"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -308,7 +288,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="ELSE Statement"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -320,7 +299,6 @@
             android:id="@+id/textView51"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="Use the else statement to specify a block of code to be executed if the condition is false."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -334,9 +312,8 @@
             android:id="@+id/textView53"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/elseExample"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -363,7 +340,6 @@
             android:id="@+id/textView55"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="Use the else statement to specify a block of code to be executed if the condition is false."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -379,7 +355,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/elseif"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -390,11 +365,9 @@
             tools:ignore="TextSizeCheck,VisualLintLongText" />
 
         <TextView
-            android:id="@+id/textView47"
-            android:layout_width="wrap_content"
+	        android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="ELSE IF Statement"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -403,10 +376,8 @@
             app:layout_constraintTop_toBottomOf="@+id/textView53" />
 
         <TextView
-            android:id="@+id/textView52"
-            android:layout_width="0dp"
+	        android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="Use the else statement to specify a block of code to be executed if the condition is false."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -421,7 +392,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="NESTED IF Statement"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -433,7 +403,6 @@
             android:id="@+id/textView44"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="You can have if statements inside if statements, this is called a nested if."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -449,7 +418,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/nestedif"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -465,7 +433,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="Programming hinges on conditions and if statements, which form the basis of decision-making and control the dynamic nature of programs. These powerful statements enable developers to craft code that can respond to a myriad of different scenarios, propelling it into a realm of bespoke flexibility. They aid programmers in describing the rules that will define what a program does next, through a foundation of intelligibility."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -476,12 +443,9 @@
             tools:ignore="TextSizeCheck,VisualLintLongText" />
 
         <TextView
-            android:id="@+id/textView61"
-            android:layout_width="0dp"
+	        android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="I'm so happy im able to provide you some examples about conditional statements."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -509,9 +473,7 @@
             android:id="@+id/btndyk2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="64dp"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
+            android:theme="@style/lionelButton"
             android:shadowColor="#575757"
             android:text="@string/dyk"
             android:textColor="#000000"
@@ -554,10 +516,8 @@
             app:srcCompat="@drawable/codey_java_dyk" />
 
         <TextView
-            android:id="@+id/textView34"
-            android:layout_width="wrap_content"
+	        android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="@string/questions_you_might_asked"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -574,8 +534,7 @@
             android:layout_width="271dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
+            android:theme="@style/lionelButton"
             android:text="What happens if a condition in the &quot;else if&quot; statement is true?"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -590,8 +549,7 @@
             android:id="@+id/btnquestion2"
             android:layout_width="271dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
+            android:theme="@style/lionelButton"
             android:text="What is the difference between &quot;==&quot; and &quot;.equals()&quot; when comparing objects in Java's conditional statements?"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -607,8 +565,7 @@
             android:id="@+id/btnquestion3"
             android:layout_width="271dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
+            android:theme="@style/lionelButton"
             android:text="How can I verify many conditions with a &quot;if&quot; statement in Java?"
             android:textAllCaps="false"
             android:textColor="#000000"
