--- a/app/src/main/res/layout/activity_java_data_types.xml
+++ b/app/src/main/res/layout/activity_java_data_types.xml
@@ -18,7 +18,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:fontFamily="@font/font"
             android:text="Data Types"
             android:textAllCaps="true"
             android:textColor="#000000"
@@ -47,10 +46,8 @@
             android:id="@+id/textView16"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
-            android:text="[Insert codey introduction]"
+            android:text="I'll be showing you the different types of data types in Java. "
             android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="italic"
@@ -67,7 +64,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="Making Use of Data Types"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -80,7 +76,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="Data types are classified into two categories:"
             android:textColor="#000000"
 
@@ -96,7 +91,6 @@
             android:id="@+id/textView11"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="A data type is a collection of values and the operations that can be performed on those values. In Java, the primitive data types you've been using are augmented by substantial libraries of reference types designed for a wide range of applications."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -110,9 +104,7 @@
             android:id="@+id/textView6"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/TwoTypesOfDataTypes"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -126,11 +118,8 @@
             android:id="@+id/btndyk1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="64dp"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
-            android:shadowColor="#575757"
             android:text="@string/dyk"
+            android:theme="@style/lionelButton"
             android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -161,7 +150,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="Data types are classified into two categories:"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -189,8 +177,8 @@
             android:id="@+id/textView30"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="@string/DataTypesTwoCategories"
+            android:background="@drawable/callout_background"
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline7"
@@ -215,10 +203,8 @@
             app:srcCompat="@drawable/codey_java_dyk" />
 
         <TextView
-            android:id="@+id/textView34"
-            android:layout_width="wrap_content"
+	        android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="@string/questions_you_might_asked"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -235,8 +221,7 @@
             android:layout_width="271dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
+            android:theme="@style/lionelButton"
             android:text="What is the data type used to store whole numbers in Java? "
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -251,8 +236,7 @@
             android:id="@+id/btnquestion2"
             android:layout_width="271dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
+            android:theme="@style/lionelButton"
             android:text="What is the data type used to store decimal numbers with single precision in Java? "
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -268,8 +252,7 @@
             android:id="@+id/btnquestion3"
             android:layout_width="271dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
+            android:theme="@style/lionelButton"
             android:text="What is the data type used to store a single character in Java? "
             android:textAllCaps="false"
             android:textColor="#000000"
