--- a/app/src/main/res/layout/activity_java_inputs.xml
+++ b/app/src/main/res/layout/activity_java_inputs.xml
@@ -15,14 +15,12 @@
 
 
     <TextView
-        android:id="@+id/textView25"
-        android:layout_width="0dp"
+	    android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/callout_background"
-        android:fontFamily="@font/lionel"
         android:text="@string/the_nextline_method_which_is_used_to_read_strings_was_utilized_in_the_example_above_look_at_the_table_below_these_are_other_types_of_inputs_to_read"
         android:textColor="#000000"
-        android:textSize="18sp"
+        android:textSize="16dp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
@@ -33,12 +31,10 @@
         tools:ignore="TextSizeCheck,VisualLintLongText" />
 
     <TextView
-        android:id="@+id/textView26"
-        android:layout_width="0dp"
+	    android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/callout_background"
-        android:fontFamily="@font/lionel"
         android:text="@string/input_methods"
         android:textColor="#000000"
         android:textSize="16sp"
@@ -67,7 +63,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:fontFamily="@font/lionel"
         android:text="@string/refers_to_the_process_of_accepting_data_or_information_from_a_user_during_the_execution_of_a_java_program_it_allows_users_to_interact_with_a_program"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -81,8 +76,7 @@
         android:id="@+id/textView21"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:fontFamily="@font/lionel"
+        android:layout_marginTop="16dp"
         android:text="@string/the_java_util_package_contains_the_scanner_class_which_is_used_to_gather_user_input"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -97,7 +91,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:fontFamily="@font/lionel"
         android:text="@string/you_can_utilize_any_of_the_various_methods_listed_in_the_scanner_class_documentation_by_creating_an_object_of_the_class_and_using_it_the_nextline_method_which_is_used_to_read_strings_will_be_utilized_in_our_example"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -111,9 +104,8 @@
         android:id="@+id/textView24"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:background="@color/light_gray"
-        android:fontFamily="@font/lionel"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/callout_background"
         android:text="@string/Scanner"
         android:textColor="#000000"
         android:textSize="16sp"
@@ -130,7 +122,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
-        android:fontFamily="@font/lionel"
         android:text="@string/java_user_input"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -139,11 +130,9 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView6" />
 
     <TextView
-        android:id="@+id/textView19"
-        android:layout_width="224dp"
+	    android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/callout_background"
-        android:fontFamily="@font/lionel"
         android:text="@string/let_s_start_the_inputs_of_java_lesson"
         android:textColor="#000000"
         android:textSize="16sp"
@@ -174,7 +163,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:fontFamily="@font/font"
         android:text="@string/inputs"
         android:textAllCaps="true"
         android:textColor="#000000"
