--- a/app/src/main/res/layout/activity_java_introduction.xml
+++ b/app/src/main/res/layout/activity_java_introduction.xml
@@ -20,7 +20,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:fontFamily="@font/font"
             android:text="@string/introductions"
             android:textAllCaps="true"
             android:textColor="#000000"
@@ -48,9 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="76dp"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
-            android:shadowColor="#575757"
+            android:theme="@style/lionelButton"
             android:text="@string/codey_s_trivia_sentence"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -79,10 +76,9 @@
 
         <TextView
             android:id="@+id/textView16"
-            android:layout_width="224dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/let_s_start_the_introduction_of_java_lesson_feel_free_to_ask_questions_or_request_clarification_at_the_end_of_the_discussion"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -100,7 +96,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="@string/java"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -113,7 +108,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:fontFamily="@font/lionel"
             android:text="Java is an object-oriented, class-based high-level tool with a focus on minimizing the need for various implementation dependencies. Its intention is for programmers to be able to write once and run anywhere (WORA), thus the compiled Java code can run on any platform that supports Java without the requirement of recompiling. Java bytecode, which is the end product of compiling Java applications, can run on any Java virtual machine (JVM), regardless of the underlying computer architecture. While the syntax of Java does have similarities to C and C++, it has fewer low-level features than either of them. Dynamic capabilities, like runtime code modification and reflection, are provided by the Java runtime - something that sets it apart from traditional compiled languages. Originally, Sun Microsystems developed this language and it was available for use in May 1995. "
             android:textColor="#000000"
             android:textSize="16sp"
@@ -127,7 +121,7 @@
             android:id="@+id/textView27"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
+            android:layout_marginTop="16dp"
             android:text="@string/javaintrodullets"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -138,25 +132,24 @@
             tools:ignore="TextSizeCheck" />
 
         <TextView
-            android:id="@+id/textView5"
             android:layout_width="224dp"
             android:layout_height="wrap_content"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="Why use Java over other programming language?"
             android:textColor="#000000"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="@+id/imageView11"
             app:layout_constraintStart_toEndOf="@+id/imageView11"
             app:layout_constraintTop_toTopOf="@+id/imageView11"
+            app:layout_constraintVertical_bias="0.689"
             tools:ignore="TextSizeCheck" />
 
         <ImageView
             android:id="@+id/imageView11"
             android:layout_width="54dp"
             android:layout_height="74dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:contentDescription="@string/codey_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.002"
@@ -168,8 +161,7 @@
             android:id="@+id/textView18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
-            android:fontFamily="@font/lionel"
+            android:layout_marginTop="16dp"
             android:text="@string/here_s_a_quick_overview_of_some_key_concepts_in_java"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -185,8 +177,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:fontFamily="@font/lionel"
-            android:text='@string/platform_independence_java_is_a_write_once_run_anywhere_language_this_means_that_once_you_write_a_java_program_you_can_run_it_on_any_platform_that_has_a_java_virtual_machine_jvm_the_jvm_acts_as_an_interpreter_allowing_the_java_code_to_be_executed_on_different_operating_systems'
+            android:text='@string/IntroBullet_1'
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline7"
@@ -200,8 +191,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:fontFamily="@font/lionel"
-            android:text='@string/object_oriented_programming_java_is_an_object_oriented_programming_oop_language_this_means_that_it_revolves_around_the_concept_of_objects_which_are_instances_of_classes_objects_have_attributes_variables_and_behavior_methods_and_they_interact_with_each_other_through_method_calls'
+            android:text='@string/IntroBullet_2'
             android:textAllCaps="false"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -216,8 +206,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:fontFamily="@font/lionel"
-            android:text='@string/syntax_java_has_a_syntax_similar_to_other_programming_languages_like_c_and_c_it_uses_semicolons_to_end_statements_and_curly_braces_to_define_code_blocks_the_code_is_organized_into_classes_and_each_class_can_have_methods_and_variables'
+            android:text='@string/IntroBullet_3'
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline7"
@@ -231,8 +220,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:fontFamily="@font/lionel"
-            android:text="@string/garbage_collection_java_has_automatic_memory_management_through_a_process_called_garbage_collection_it_takes_care_of_allocating_and_deallocating_memory_for_objects_so_developers_don_t_have_to_explicitly_manage_memory_resources_this_helps_in_preventing_memory_leaks_and_makes_java_programs_more_robust"
+            android:text="@string/IntroBullet_4"
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline7"
@@ -246,8 +234,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:fontFamily="@font/lionel"
-            android:text="@string/standard_library_java_provides_a_rich_set_of_libraries_and_apis_application_programming_interfaces_that_simplify_common_programming_tasks_these_libraries_cover_areas_such_as_input_output_networking_data_structures_graphics_and_more_they_save_developers_time_and_effort_by_providing_pre_built_functionality"
+            android:text="@string/IntroBullet_5"
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline7"
@@ -261,8 +248,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:fontFamily="@font/lionel"
-            android:text="@string/exception_handling_java_has_a_built_in_exception_handling_mechanism_that_allows_you_to_catch_and_handle_errors_and_exceptional_situations_in_your_code_this_helps_in_writing_more_reliable_and_robust_programs_by_gracefully_handling_unexpected_situations"
+            android:text="@string/IntroBullet_6"
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline7"
@@ -301,10 +287,8 @@
             app:srcCompat="@drawable/codey_java_dyk" />
 
         <TextView
-            android:id="@+id/textView20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="@string/questions_you_might_asked"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -321,12 +305,11 @@
             android:layout_width="271dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
             android:text="@string/is_java_a_programming_or_scripting_language"
             android:textAllCaps="false"
             android:textColor="#000000"
             android:textStyle="bold"
+            android:theme="@style/lionelButton"
             app:cornerRadius="10dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline7"
             app:layout_constraintHorizontal_bias="0.491"
@@ -337,12 +320,11 @@
             android:id="@+id/btnquestion2"
             android:layout_width="271dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
             android:text="@string/what_makes_java_different_to_other_languages"
             android:textAllCaps="false"
             android:textColor="#000000"
             android:textStyle="bold"
+            android:theme="@style/lionelButton"
             app:cornerRadius="10dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline7"
             app:layout_constraintHorizontal_bias="0.491"
@@ -354,12 +336,11 @@
             android:id="@+id/btnquestion3"
             android:layout_width="271dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
             android:text="@string/what_makes_java_so_unique"
             android:textAllCaps="false"
             android:textColor="#000000"
             android:textStyle="bold"
+            android:theme="@style/lionelButton"
             app:cornerRadius="10dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline7"
             app:layout_constraintHorizontal_bias="0.491"
