--- a/app/src/main/res/layout/activity_java_looping_statements.xml
+++ b/app/src/main/res/layout/activity_java_looping_statements.xml
@@ -18,7 +18,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:fontFamily="@font/font"
             android:text="Looping Statements"
             android:textAllCaps="true"
             android:textColor="#000000"
@@ -44,12 +43,9 @@
             app:srcCompat="@drawable/codey_java" />
 
         <TextView
-            android:id="@+id/textView68"
-            android:layout_width="0dp"
+	        android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="Hello, Im Codey! I'd be happy to help you understand looping statements in programming."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -78,9 +74,7 @@
             android:id="@+id/textView16"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="I can assist you by providing general information, explanations, and code examples based on my training data. Let's explore how conditions and if statements work in Java."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -98,7 +92,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="Java programming enables the use of looping statements that prove valuable when performing sets of repetitive tasks such as iterating over data collections and carrying out varied operations in an organized manner by automation. With numerous available forms suited to specific requirements regarding operation flow control within loops, Java offers considerable flexibility."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -121,12 +114,9 @@
             app:srcCompat="@drawable/codey_java" />
 
         <TextView
-            android:id="@+id/textView85"
-            android:layout_width="0dp"
+	        android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="You already know that Java supports the usual logical conditions from mathematics:"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -154,9 +144,7 @@
             android:id="@+id/textView42"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="It consists of an initialization, a condition, an iteration expression, and a loop body. The loop body is executed repeatedly as long as the condition is true."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -184,10 +172,8 @@
             app:layout_constraintGuide_end="15dp" />
 
         <TextView
-            android:id="@+id/textView86"
-            android:layout_width="0dp"
+	        android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="You can use these conditions to perform different actions for different decisions."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -203,7 +189,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="@string/operators"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -217,7 +202,6 @@
             android:id="@+id/textView35"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="You can use these conditions to perform different actions for different decisions."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -233,8 +217,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="10dp"
-            android:fontFamily="@font/lionel"
             android:text="In Java, there are three primary looping statements:"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -249,7 +231,6 @@
             android:id="@+id/textView33"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="@string/three_primary_loop"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -264,7 +245,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="for loop"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -276,7 +256,6 @@
             android:id="@+id/textView45"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="The for loop is commonly used when you know the number of iterations in advance."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -291,7 +270,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/forloop"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -307,7 +285,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/iterate"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -330,12 +307,9 @@
             app:srcCompat="@drawable/codey_java_dyk" />
 
         <TextView
-            android:id="@+id/textView71"
-            android:layout_width="0dp"
+	        android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="The loop will execute 5 times, printing the iteration number from 1 to 5."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -351,9 +325,7 @@
             android:id="@+id/textView72"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="I'd be happy to provide you with some examples of else statements to help you understand how they work."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -381,7 +353,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="while loop"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -393,7 +364,6 @@
             android:id="@+id/textView74"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="The while loop is suitable when the number of iterations is not known in advance, and the loop continues until a specified condition becomes false."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -408,7 +378,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/while_loop"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -422,9 +391,7 @@
             android:id="@+id/javaloopdyk1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="64dp"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
+            android:theme="@style/lionelButton"
             android:shadowColor="#575757"
             android:text="@string/dyk"
             android:textColor="#000000"
@@ -456,9 +423,8 @@
             android:id="@+id/textView76"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/whileloopex"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -481,12 +447,9 @@
             app:srcCompat="@drawable/codey_java_dyk" />
 
         <TextView
-            android:id="@+id/textView77"
-            android:layout_width="0dp"
+	        android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="The loop will execute 5 times, printing the iteration number from 1 to 5."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -510,12 +473,9 @@
             app:srcCompat="@drawable/codey_java_dyk" />
 
         <TextView
-            android:id="@+id/textView78"
-            android:layout_width="0dp"
+	        android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="I'm glad im happy to provide you some examples."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -532,7 +492,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="do-while loop"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -544,8 +503,6 @@
             android:id="@+id/textView80"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:fontFamily="@font/lionel"
             android:text="The do-while loop is similar to the while loop, but it guarantees that the loop body is executed at least once."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -560,7 +517,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/do_while"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -586,9 +542,7 @@
             android:id="@+id/javaloopdyk2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="64dp"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
+            android:theme="@style/lionelButton"
             android:shadowColor="#575757"
             android:text="@string/dyk"
             android:textColor="#000000"
@@ -608,9 +562,8 @@
             android:id="@+id/textView82"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/do_while_ex"
             android:textColor="#000000"
             android:textSize="14sp"
@@ -632,12 +585,9 @@
             app:srcCompat="@drawable/codey_java_dyk" />
 
         <TextView
-            android:id="@+id/textView84"
-            android:layout_width="0dp"
+	        android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="I'm glad im happy to provide you some examples."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -654,7 +604,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="foreach loop"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -666,8 +615,6 @@
             android:id="@+id/textView88"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:fontFamily="@font/lionel"
             android:text="The do-while loop is similar to the while loop, but it guarantees that the loop body is executed at least once."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -682,7 +629,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/foreach"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -708,10 +654,7 @@
             android:id="@+id/javaloopdyk3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="64dp"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
-            android:shadowColor="#575757"
+            android:theme="@style/lionelButton"
             android:text="@string/dyk"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -730,9 +673,8 @@
             android:id="@+id/textView90"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/foreach_example"
             android:textColor="#000000"
             android:textSize="14sp"
@@ -754,12 +696,9 @@
             app:srcCompat="@drawable/codey_java_dyk" />
 
         <TextView
-            android:id="@+id/textView91"
-            android:layout_width="0dp"
+	        android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="I'm glad im happy to provide you some examples."
             android:textColor="#000000"
             android:textSize="16sp"
@@ -772,11 +711,9 @@
             tools:ignore="TextSizeCheck,VisualLintLongText" />
 
         <TextView
-            android:id="@+id/textView92"
-            android:layout_width="0dp"
+	        android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="Java programming offers control flow structures that facilitate iterative operations which can be essential for efficiently executing tedious or repetitive tasks, as well as looping through collections of data. Looping is not only a key feature of Java, but allows developers to make use of the language's full capabilities. However, the structure of the loop must be carefully chosen to ensure the right amount of repetition and termination conditions are set. To achieve a higher degree of perplexity and burstiness, the structure of the loop should be defined by more than one condition."
             android:textColor="#000000"
             android:textSize="16sp"
