--- a/app/src/main/res/layout/activity_java_syntax.xml
+++ b/app/src/main/res/layout/activity_java_syntax.xml
@@ -17,7 +17,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:fontFamily="@font/font"
             android:text="Syntax"
             android:textAllCaps="true"
             android:textColor="#000000"
@@ -34,7 +33,7 @@
             android:layout_height="74dp"
             android:layout_marginTop="12dp"
             android:contentDescription="@string/codey_image"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline7"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline6"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
@@ -43,11 +42,9 @@
 
         <TextView
             android:id="@+id/textView16"
-            android:layout_width="224dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/SetGuideline"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -64,8 +61,7 @@
             android:id="@+id/textView13"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:fontFamily="@font/lionel"
+            android:layout_marginTop="16dp"
             android:text="@string/syntaxtIntro"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -79,8 +75,7 @@
             android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:fontFamily="@font/lionel"
+            android:layout_marginTop="16dp"
             android:text="@string/identifier"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -89,11 +84,24 @@
             app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
         <TextView
+            android:id="@+id/textView4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="@string/identifierDefinition"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toStartOf="@+id/guideline7"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/guideline6"
+            app:layout_constraintTop_toBottomOf="@+id/textView14"
+            tools:ignore="TextSizeCheck,VisualLintLongText" />
+
+        <TextView
             android:id="@+id/textView10"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="@string/TypesOfIdentifier"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -108,11 +116,8 @@
             android:id="@+id/textView6"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="10dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/TypesOFIdentifier"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -122,28 +127,13 @@
             app:layout_constraintTop_toBottomOf="@+id/textView10"
             tools:ignore="TextSizeCheck,VisualLintLongText" />
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/lionel"
-            android:text="@string/identifierDefinition"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline7"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline6"
-            app:layout_constraintTop_toBottomOf="@+id/textView14"
-            tools:ignore="TextSizeCheck,VisualLintLongText" />
-
         <ImageView
             android:id="@+id/imageView03"
             android:layout_width="54dp"
             android:layout_height="74dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="16dp"
             android:contentDescription="@string/codey_image"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline7"
             app:layout_constraintHorizontal_bias="0.003"
             app:layout_constraintStart_toStartOf="@+id/guideline6"
             app:layout_constraintTop_toBottomOf="@+id/textView4"
@@ -154,9 +144,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="64dp"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
-            android:shadowColor="#575757"
+            android:theme="@style/lionelButton"
             android:text="@string/dyk"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -173,10 +161,8 @@
 
 
         <TextView
-            android:id="@+id/textView28"
-            android:layout_width="224dp"
+	        android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
             android:fontFamily="@font/lionel"
             android:text="@string/now_why_don_t_we_create_our_first_java_program_shall_we_i_ll_explain_further_the_meaning_of_each_code"
@@ -195,7 +181,7 @@
             android:id="@+id/imageView9"
             android:layout_width="54dp"
             android:layout_height="74dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="16dp"
             android:contentDescription="@string/codey_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -221,14 +207,12 @@
             android:id="@+id/textView29"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/firstjavaprogram"
             android:textColor="#000000"
             app:layout_constraintEnd_toStartOf="@+id/guideline7"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline6"
             app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
         <TextView
@@ -236,7 +220,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="@string/SynExplainMethods"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -252,19 +235,16 @@
             android:layout_height="74dp"
             android:layout_marginTop="16dp"
             android:contentDescription="@string/codey_image"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline7"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline6"
             app:layout_constraintTop_toBottomOf="@+id/textView30"
             app:srcCompat="@drawable/codey_java_dyk" />
 
         <TextView
-            android:id="@+id/textView02"
-            android:layout_width="224dp"
+	        android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/guess_right"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -282,8 +262,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
+            android:theme="@style/lionelButton"
             android:text="@string/answer"
             android:textColor="#000000"
             app:layout_constraintEnd_toStartOf="@+id/guideline7"
@@ -298,7 +277,7 @@
             android:layout_marginTop="16dp"
             android:contentDescription="@string/codey_image"
             android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline7"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline6"
             app:layout_constraintTop_toBottomOf="@+id/btnAnswer01"
@@ -307,9 +286,8 @@
 
         <TextView
             android:id="@+id/AnswerCodeyTextView"
-            android:layout_width="224dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
             android:fontFamily="@font/lionel"
             android:text="@string/great_you_guessed_it_right_the_output_to_the_code_is_hello_world_it_s_fun_learning_java_isn_t_it_let_s_keep_learning"
@@ -332,7 +310,7 @@
             android:layout_height="74dp"
             android:layout_marginTop="16dp"
             android:contentDescription="@string/codey_image"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline7"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline6"
             app:layout_constraintTop_toBottomOf="@+id/AnswerCodeyImage"
@@ -340,11 +318,9 @@
 
         <TextView
             android:id="@+id/textView32"
-            android:layout_width="224dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/always_remember_that_the_curly_braces_marks_the_beginning_and_the_end_of_a_block_of_code"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -362,7 +338,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="@string/SyntaxSystem"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -388,10 +363,8 @@
             app:srcCompat="@drawable/codey_java_dyk" />
 
         <TextView
-            android:id="@+id/textView34"
-            android:layout_width="wrap_content"
+	        android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="@string/questions_you_might_asked"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -408,8 +381,7 @@
             android:layout_width="271dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
+            android:theme="@style/lionelButton"
             android:text="@string/what_will_happen_if_i_declare_two_variables_with_same_spelling_but_different_values"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -424,8 +396,7 @@
             android:id="@+id/btnquestion2"
             android:layout_width="271dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
+            android:theme="@style/lionelButton"
             android:text="@string/can_i_make_a_program_without_using_an_identifier"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -441,8 +412,7 @@
             android:id="@+id/btnquestion3"
             android:layout_width="271dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
+            android:theme="@style/lionelButton"
             android:text="@string/what_is_the_difference_of_identifier_to_keyword"
             android:textAllCaps="false"
             android:textColor="#000000"
