--- a/app/src/main/res/layout/activity_java_variables.xml
+++ b/app/src/main/res/layout/activity_java_variables.xml
@@ -20,7 +20,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="40dp"
-            android:fontFamily="@font/font"
             android:text="@string/variables"
             android:textAllCaps="true"
             android:textColor="#000000"
@@ -43,11 +42,10 @@
 
         <TextView
             android:id="@+id/textView16"
-            android:layout_width="224dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
-            android:text="@string/codey_sentence_insert_here"
+            android:text="Welcome to variables in java. You will see all the variables in Java"
             android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="italic"
@@ -65,7 +63,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="@string/variables_1"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -79,7 +76,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="@string/variable_types"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -91,8 +87,6 @@
             android:id="@+id/textView1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/lionel"
             android:text="@string/a_variable_is_a_named_storage_location_that_holds_a_value_of_a_particular_type_it_allows_you_to_store_and_manipulate_data_within_a_program_before_using_a_variable_you_need_to_declare_it_specifying_its_type_and_name"
             android:textColor="#000000"
             android:textIsSelectable="false"
@@ -105,11 +99,9 @@
 
 
         <TextView
-            android:id="@+id/introduction_bullet7"
-            android:layout_width="0dp"
+	        android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:fontFamily="@font/lionel"
             android:text="@string/Variables"
             android:textAllCaps="false"
             android:textColor="#000000"
