--- a/app/src/main/res/layout/activity_java_comments.xml
+++ b/app/src/main/res/layout/activity_java_comments.xml
@@ -18,7 +18,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:fontFamily="@font/font"
             android:text="Comments"
             android:textAllCaps="true"
             android:textColor="#000000"
@@ -47,9 +46,7 @@
             android:id="@+id/textView16"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/have_you_ever_wonder_if_you_can_put_a_text_in_java_that_looks_like_a_note_to_identify_what_kind_of_code_is_it_without_being_interpreted_by_the_compiler_worry_no_more_because_i_introduce_to_you_the_java_comments_let_s_see_what_we_ve_got_here"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -67,7 +64,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:fontFamily="@font/lionel"
             android:text="@string/in_java_comments_are_non_executable_lines_of_code_that_provide_explanations_annotations_or_disable_codes_temporarily_they_are_essential_for_code_documentation_readability_and_collaboration_there_are_three_types_of_comments_in_java_single_line_comments_multi_line_comments_and_javadoc_comments"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -81,8 +77,7 @@
             android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:fontFamily="@font/lionel"
+            android:layout_marginTop="16dp"
             android:text="@string/single_line_comments"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -95,7 +90,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="@string/here_is_an_example_of_a_single_line_comment"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -112,9 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="10dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/this_comment_just_has_one_line"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -128,8 +120,7 @@
             android:id="@+id/textView31"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/lionel"
+            android:layout_marginTop="16dp"
             android:text="@string/multi_line_comments"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -142,8 +133,7 @@
             android:id="@+id/textView37"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/lionel"
+            android:layout_marginTop="16dp"
             android:text="@string/javadoc_comments"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -155,7 +145,6 @@
             android:id="@+id/textView4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="@string/a_single_line_of_code_can_be_transformed_into_a_comment_to_provide_a_brief_explanation_it_is_considered_a_comment_and_will_not_be_processed_if_text_is_added_to_a_line_after"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -183,7 +172,6 @@
             android:id="@+id/textView30"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="@string/a_multi_line_comments_can_occupy_at_least_2_lines_of_code_and_more_that_depends_to_the_preference_of_the_programmer_or_developer_it_can_also_disregard_codes_and_transform_into_comments_by_clicking_ctrl_on_the_keyboard_and_simultaneously"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -197,8 +185,7 @@
             android:id="@+id/textView35"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:fontFamily="@font/lionel"
+            android:layout_marginTop="16dp"
             android:text="@string/here_is_an_example_of_a_multi_line_comment"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -214,7 +201,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/lionel"
             android:text="@string/javadoc_comments_usually_begin_with_and_end_with_and_can_include_various_tags_and_annotations_that_provides_detailed_information_about_the_documented_elements"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -229,9 +215,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/this_comment_consists_of_several_lines_it_may_vary_according_to_the_preference_of_the_developer"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -245,7 +229,6 @@
             android:id="@+id/textView33"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="@string/a_javadoc_comments_are_special_type_of_comments_that_is_used_in_java_to_generate_automatic_documentation_it_is_usually_written_in_a_specific_format_that_can_be_used_to_document_program_elements_such_as_classes_interfaces_methods_fields_etc_this_is_then_processed_by_the_javadoc_tool_which_later_on_creates_html_based_documentation_files"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -260,7 +243,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:fontFamily="@font/lionel"
             android:text="@string/here_is_an_example_of_a_javadoc_comment"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -276,9 +258,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/javadoc"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -292,9 +272,7 @@
             android:id="@+id/textView41"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:background="@drawable/callout_background"
-            android:fontFamily="@font/lionel"
             android:text="@string/always_remember_that_it_is_a_good_practice_to_include_comments_in_the_code_to_improve_its_readability_and_maintainability_as_well_as_easily_identify_the_errors_when_the_program_stops_producing_output_and_needs_to_be_debug_by_the_developer"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -334,10 +312,8 @@
             app:srcCompat="@drawable/codey_java_dyk" />
 
         <TextView
-            android:id="@+id/textView34"
-            android:layout_width="wrap_content"
+	        android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lionel"
             android:text="@string/questions_you_might_asked"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -354,8 +330,7 @@
             android:layout_width="271dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
+            android:theme="@style/lionelButton"
             android:text="@string/what_is_the_purpose_of_comments_in_java"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -370,8 +345,7 @@
             android:id="@+id/btnquestion2"
             android:layout_width="271dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
+            android:theme="@style/lionelButton"
             android:text="@string/what_is_the_difference_of_a_single_line_vs_multi_line_comment"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -387,8 +361,7 @@
             android:id="@+id/btnquestion3"
             android:layout_width="271dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/light_gray"
-            android:fontFamily="@font/lionel"
+            android:theme="@style/lionelButton"
             android:text="@string/can_comments_slow_down_a_program_s_execution"
             android:textAllCaps="false"
             android:textColor="#000000"
