--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,25 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
+
     <style name="Base.Theme.Care_Prototype_01" parent="Theme.Material3.Light.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:textViewStyle">@style/lionelTextView</item>
+        <item name="android:buttonStyle">@style/lionelButton</item>
+
     </style>
 
-    <style name="Theme.Care_Prototype_01" parent="Base.Theme.Care_Prototype_01" />
+    <style name="Theme.Care_Prototype_01" parent="Base.Theme.Care_Prototype_01">
+        <item name="android:textViewStyle">@style/lionelTextView</item>
+        <item name="android:buttonStyle">@style/lionelButton</item>
+    </style>
+
+    <!-- TextFontFamily. -->
+    <style name="lionelTextView" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/font</item>
+    </style>
+
+    <style name="lionelButton" parent="android:Widget.Button">
+        <item name="android:fontFamily">@font/font</item>
+        <item name="android:backgroundTint">@color/light_blue</item>
+    </style>
+
 </resources>
